force-app/main/default/objects/Lead/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <displayFormat>APP-{0000}</displayFormat>
    <label>Application</label>
    <type>AutoNumber</type>
</CustomField>