force-app/main/default/objects/Lead/recordTypes/Dealers_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Dealers_Record_type</fullName>
    <active>true</active>
    <businessProcess>Dealer Lead Process</businessProcess>
    <description>It is used to create records of dealers record type</description>
    <label>Dealers Record type</label>
</RecordType>