force-app/main/default/objects/Lead/validationRules/First_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Validation</fullName>
    <active>true</active>
    <description>This rule is used to check whether the dealer enters a Valid name</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(  FirstName )),
    NOT(
        REGEX(
             FirstName ,
            &quot;^[A-Za-z][A-Za-z .&apos;-]*$&quot;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name can contain only letters, spaces, apostrophes and hyphens.</errorMessage>
</ValidationRule>