force-app/main/default/objects/Lead/validationRules/GSTIN_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>GSTIN_Validation_Rule</fullName>
    <active>true</active>
    <description>It is used to verify whether the user enters correct GST number in Correct format .</description>
    <errorConditionFormula>NOT(
    REGEX(
         GSTIN__c ,
        &quot;^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z][0-9A-Z]Z[0-9A-Z]$&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>GSTIN__c</errorDisplayField>
    <errorMessage>Invalid GST Number ,Kindly Check it.</errorMessage>
</ValidationRule>