force-app/main/default/objects/Lead/validationRules/Last_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_Validation</fullName>
    <active>true</active>
    <description>This rule is used to check whether the user enters a Valid Name.</description>
    <errorConditionFormula>NOT(
        REGEX(
             LastName ,
            &quot;^[A-Za-z][A-Za-z .&apos;-]*$&quot;
        )
    )</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Name can contain only letters, spaces, apostrophes and hyphens.</errorMessage>
</ValidationRule>