force-app/main/default/objects/Lead/validationRules/Lead_International_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_International_Phone_Validation</fullName>
    <active>true</active>
    <description>Validates the Lead Phone number to ensure it contains a valid international phone number format with an optional country code and between 7 and 15 digits.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone)),
    NOT(REGEX(Phone, &quot;^\\+?[0-9]{7,15}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter a valid international phone number with 7 to 15 digits. Country code is optional.</errorMessage>
</ValidationRule>