force-app/main/default/objects/Lead/validationRules/PAN_Number_Validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Number_Validation_rule</fullName>
    <active>true</active>
    <description>It is used to check whether the user enters the PAN number in correct format.</description>
    <errorConditionFormula>NOT(
    REGEX(
         PAN_Number__c ,
        &quot;^[A-Z]{5}[0-9]{4}[A-Z]$&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>PAN_Number__c</errorDisplayField>
    <errorMessage>Kindly check the PAN number.</errorMessage>
</ValidationRule>